up exo 01 hello world

--- a/01HelloWorld/Form1.resx
+++ b/01HelloWorld/Form1.resx
@@ -117,4 +117,81 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        AAABAAEAICAAAAEAIACoEAAAFgAAACgAAAAgAAAAQAAAAAEAIAAAAAAAABAAAPD3AQDw9wEAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAACAAAAAAAAADYAAAD3AAAA+wAA
+        APoAAAD7AAAA+wAAAPoAAAD8AAAA9gAAADYAAAAAAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAAAAAAfAAA
+        AP8AAAD7AAAA/wAAAP8AAAD/AAAA/wAAAPsAAAD/AAAAfAAAAAAAAAAEAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAQAAAAMAAAABAAAAAAAAAAAAAAAAAAAAAwAA
+        AAAAAACrAAAA/wAAAIsAAAAdAAAAMAAAADAAAAAdAAAAiwAAAP8AAACrAAAAAAAAAAMAAAAAAAAAAAAA
+        AAAAAAABAAAAAwAAAAEAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAAAAAAADAAAABAAA
+        AAMAAAABAAAABAAAANgAAAD/AAAARwAAAAAAAAADAAAAAwAAAAAAAABIAAAA/wAAANgAAAAEAAAAAQAA
+        AAMAAAAEAAAAAwAAAAAAAAAAAAAAAQAAAAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAABQAAABKAAAAFQAA
+        AAAAAAABAAAAAgAAAAAAAABDAAAA/AAAAPYAAAAgAAAAAAAAAAQAAAAEAAAAAAAAACAAAAD2AAAA/AAA
+        AEMAAAAAAAAAAgAAAAEAAAAAAAAAFQAAAEoAAAAUAAAAAAAAAAEAAAAAAAAAAAAAAAIAAAAAAAAArQAA
+        AP8AAADsAAAArAAAAFYAAAAjAAAAnAAAAPsAAAD/AAAA0gAAAAEAAAAAAAAAAQAAAAEAAAAAAAAAAQAA
+        ANMAAAD/AAAA+wAAAJwAAAAjAAAAVgAAAKwAAADsAAAA/wAAAK0AAAAAAAAAAgAAAAAAAAADAAAAAAAA
+        AFAAAAD/AAAA+gAAAP0AAAD/AAAA/wAAAPoAAAD/AAAA/QAAALoAAAA2AAAAAAAAAAIAAAAAAAAAAAAA
+        AAIAAAAAAAAANgAAALoAAAD9AAAA/wAAAPoAAAD/AAAA/wAAAP0AAAD6AAAA/wAAAFAAAAAAAAAAAwAA
+        AAAAAAAJAAAA0gAAAP8AAACVAAAALAAAAI4AAADYAAAA/wAAANwAAABDAAAAAAAAAAEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAABAAAAAAAAAEMAAADcAAAA/wAAANgAAACPAAAALQAAAJUAAAD/AAAA0gAA
+        AAkAAAAAAAAAAAAAAHkAAAD/AAAA4wAAABcAAAAAAAAAAAAAAAYAAAA3AAAAFQAAAAAAAAADAAAAAwAA
+        AAAAAAACAAAAAwAAAAMAAAACAAAAAAAAAAMAAAADAAAAAAAAABUAAAA3AAAABgAAAAAAAAAAAAAAFwAA
+        AOMAAAD/AAAAeQAAAAAAAAApAAAA7AAAAP8AAABoAAAAAAAAAAYAAAAEAAAAAQAAAAAAAAABAAAAAwAA
+        AAAAAAACAAAAAwAAAAAAAAAAAAAAAAAAAAAAAAADAAAAAgAAAAAAAAADAAAAAQAAAAAAAAABAAAABAAA
+        AAYAAAAAAAAAaAAAAP8AAADsAAAAKAAAALMAAAD/AAAAuQAAAAAAAAAEAAAAAAAAAAAAAAABAAAAAwAA
+        AAEAAAAAAAAAAgAAAAEAAAAAAAAAIQAAAEsAAABLAAAAIQAAAAAAAAABAAAAAgAAAAAAAAABAAAAAwAA
+        AAEAAAAAAAAAAAAAAAQAAAAAAAAAugAAAP8AAACzAAAA8gAAAP8AAADFAAAAFQAAAAAAAAADAAAAAAAA
+        AAAAAAAAAAAAAAAAAAIAAAAAAAAAHAAAAK0AAAD6AAAA/wAAAP8AAAD6AAAArQAAABwAAAAAAAAAAgAA
+        AAAAAAAAAAAAAAAAAAAAAAADAAAAAAAAABUAAADGAAAA/wAAAPIAAABOAAAA7gAAAP8AAADeAAAALgAA
+        AAAAAAACAAAAAAAAAAAAAAABAAAAAAAAAB0AAADfAAAA/wAAAPoAAADRAAAA0QAAAPoAAAD/AAAA3wAA
+        AB0AAAAAAAAAAQAAAAAAAAAAAAAAAgAAAAAAAAAuAAAA3gAAAP8AAADuAAAATgAAAAAAAAAvAAAA4AAA
+        AP8AAADxAAAANwAAAAAAAAACAAAAAAAAAAIAAAAAAAAAqwAAAP8AAADZAAAANwAAAAAAAAAAAAAANwAA
+        ANkAAAD/AAAAqwAAAAAAAAACAAAAAAAAAAIAAAAAAAAANwAAAPEAAAD/AAAA4AAAAC8AAAAAAAAABAAA
+        AAAAAAAbAAAA2wAAAP8AAABwAAAAAAAAAAQAAAACAAAAAAAAACUAAAD5AAAA/wAAADsAAAAAAAAAAwAA
+        AAMAAAAAAAAAOwAAAP8AAAD5AAAAJAAAAAAAAAACAAAABAAAAAAAAABwAAAA/wAAANsAAAAbAAAAAAAA
+        AAQAAAAAAAAAAwAAAAAAAADMAAAA/wAAAEoAAAAAAAAAAwAAAAMAAAAAAAAATAAAAP8AAADPAAAAAAAA
+        AAMAAAABAAAAAQAAAAMAAAAAAAAAzwAAAP8AAABMAAAAAAAAAAMAAAADAAAAAAAAAEsAAAD/AAAAzAAA
+        AAAAAAADAAAAAAAAAAAAAAADAAAAAAAAAMwAAAD/AAAASgAAAAAAAAADAAAAAwAAAAAAAABNAAAA/wAA
+        AM4AAAAAAAAAAwAAAAEAAAABAAAAAwAAAAAAAADPAAAA/wAAAEwAAAAAAAAAAwAAAAMAAAAAAAAASgAA
+        AP8AAADMAAAAAAAAAAMAAAAAAAAABAAAAAAAAAAYAAAA2QAAAP8AAABvAAAAAAAAAAQAAAACAAAAAAAA
+        ACYAAAD6AAAA/wAAADgAAAAAAAAAAwAAAAMAAAAAAAAAOQAAAP8AAAD6AAAAJQAAAAAAAAACAAAABAAA
+        AAAAAABwAAAA/wAAANkAAAAYAAAAAAAAAAQAAAAAAAAALAAAAN0AAAD/AAAA9AAAADkAAAAAAAAAAgAA
+        AAAAAAACAAAAAAAAAK4AAAD/AAAA1gAAADMAAAAAAAAAAAAAADMAAADWAAAA/wAAAK0AAAAAAAAAAgAA
+        AAAAAAACAAAAAAAAADkAAAD0AAAA/wAAAN0AAAAsAAAAAAAAAEoAAADsAAAA/wAAAOEAAAAyAAAAAAAA
+        AAIAAAAAAAAAAAAAAAIAAAAAAAAAIAAAAOIAAAD/AAAA+AAAAM0AAADNAAAA+AAAAP8AAADhAAAAHwAA
+        AAAAAAACAAAAAAAAAAAAAAACAAAAAAAAADIAAADhAAAA/wAAAOwAAABKAAAA8QAAAP8AAADIAAAAGAAA
+        AAAAAAADAAAAAAAAAAAAAAAAAAAAAAAAAAIAAAAAAAAAHwAAALIAAAD8AAAA/wAAAP8AAAD8AAAAsgAA
+        AB8AAAAAAAAAAgAAAAAAAAAAAAAAAAAAAAAAAAADAAAAAAAAABgAAADIAAAA/wAAAPEAAAC2AAAA/wAA
+        ALcAAAAAAAAABAAAAAAAAAAAAAAAAQAAAAMAAAABAAAAAAAAAAIAAAABAAAAAAAAACUAAABQAAAAUAAA
+        ACUAAAAAAAAAAQAAAAIAAAAAAAAAAQAAAAMAAAABAAAAAAAAAAAAAAAEAAAAAAAAALgAAAD/AAAAtgAA
+        ACsAAADtAAAA/wAAAGUAAAAAAAAABgAAAAQAAAABAAAAAAAAAAEAAAADAAAAAAAAAAIAAAACAAAAAAAA
+        AAAAAAAAAAAAAAAAAAIAAAACAAAAAAAAAAMAAAABAAAAAAAAAAEAAAAEAAAABgAAAAAAAABlAAAA/wAA
+        AO0AAAAqAAAAAAAAAHwAAAD/AAAA4QAAABYAAAAAAAAAAAAAAAUAAAAzAAAAEwAAAAAAAAADAAAAAwAA
+        AAAAAAACAAAABAAAAAQAAAACAAAAAAAAAAMAAAADAAAAAAAAABMAAAAzAAAABQAAAAAAAAAAAAAAFgAA
+        AOEAAAD/AAAAfAAAAAAAAAAAAAAACwAAANQAAAD/AAAAkgAAACgAAACJAAAA1AAAAP8AAADZAAAAPwAA
+        AAAAAAACAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAgAAAAAAAAA/AAAA2QAAAP8AAADUAAAAigAA
+        ACgAAACSAAAA/wAAANQAAAALAAAAAAAAAAMAAAAAAAAAUgAAAP8AAAD5AAAA/QAAAP8AAAD/AAAA+wAA
+        AP8AAAD8AAAAtQAAADMAAAAAAAAAAgAAAAAAAAAAAAAAAgAAAAAAAAAzAAAAtQAAAPwAAAD/AAAA+wAA
+        AP8AAAD/AAAA/QAAAPkAAAD/AAAAUgAAAAAAAAADAAAAAAAAAAIAAAAAAAAArwAAAP8AAADvAAAAsQAA
+        AFsAAAAnAAAAoAAAAPwAAAD/AAAA0QAAAAAAAAAAAAAAAQAAAAEAAAAAAAAAAAAAANIAAAD/AAAA/AAA
+        AKAAAAAmAAAAWwAAALEAAADvAAAA/wAAAK8AAAAAAAAAAgAAAAAAAAAAAAAAAQAAAAAAAAAVAAAATwAA
+        ABgAAAAAAAAAAQAAAAIAAAAAAAAARwAAAP0AAAD1AAAAHwAAAAAAAAAEAAAABAAAAAAAAAAfAAAA9gAA
+        AP0AAABGAAAAAAAAAAIAAAABAAAAAAAAABgAAABPAAAAFQAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAA
+        AAEAAAAAAAAAAAAAAAMAAAAEAAAAAwAAAAEAAAAEAAAA2QAAAP8AAABGAAAAAAAAAAMAAAADAAAAAAAA
+        AEcAAAD/AAAA2QAAAAQAAAABAAAAAwAAAAQAAAADAAAAAAAAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAQAAAAQAAAABAAAAAAAAAAAAAAAAAAAAAwAAAAAAAACsAAAA/wAAAIgAAAAZAAAALAAA
+        ACwAAAAZAAAAiAAAAP8AAACsAAAAAAAAAAMAAAAAAAAAAAAAAAAAAAABAAAABAAAAAEAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAEAAAAAAAAAH0AAAD/AAAA+gAA
+        AP8AAAD/AAAA/wAAAP8AAAD6AAAA/wAAAH0AAAAAAAAABAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAAMAAAAAAAAAOAAA
+        APsAAAD/AAAA/gAAAP8AAAD/AAAA/gAAAP8AAAD7AAAAOAAAAAAAAAADAAAAAAAAAAAAAAAAAAAAAAAA
+        AAAAAAAAAAAAAAAAAAAAAAAA/yAE//8gBP+gIAQFTAJAMiJCQkQgAkAEQAQgAoASSAGEJCQhCJJJEBQk
+        JCgKUApQBCAEIIIhhEFCQkJCIkQiRCJEIkRCQkJCgiGEQQQgBCAKUApQFCQkKAiSSRCEJCQhgBJIAUAE
+        IAIgBkAEIkJCREwCQDKgIAQF/yAE//8gBP8=
+</value>
+  </data>
 </root>
